[gd_scene load_steps=2 format=3 uid="uid://dxjgh15ybn8sk"]

[ext_resource type="Script" uid="uid://03on2qa2tqke" path="res://Scripts/EquipmentUI.gd" id="1_equipment"]

[node name="EquipmentUI" type="CanvasLayer"]
script = ExtResource("1_equipment")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="TopBar" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="Panel/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Equipment"

[node name="CloseButton" type="Button" parent="Panel/VBoxContainer/TopBar"]
layout_mode = 2
text = "Close"

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="EquipmentSlots" type="VBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="HSeparator2" type="HSeparator" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="StatsPanel" type="VBoxContainer" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
theme_override_constants/separation = 8
